webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
.article-page {
  &__image {
    margin-bottom: 24px;
    text-align: center;

    img {
      max-width: 100%;
      height: auto;
      width: auto;
    }
  }

  &__hero {
    width: 100%;
    height: 440px;

    picture,
    img {
      display: block;
      height: inherit;
    }

    img {
      width: 100%;
      object-fit: cover;
    }
  }

  .article-content-wrapper {
    img {
      max-width: 100%;
      height: auto;
    }
  }

  &__title {
    margin-bottom: 24px;
  }

  &__description {
    margin-bottom: 24px;
    font-size: var(--base-font-size-medium);

    img {
      max-width: 100%;
      height: auto;
    }
  }
}

.print-button {
  display: flex;
  align-items: center;
  padding-bottom: 30px;

  a {
    display: flex;
    text-decoration: none;
  }

  &__text {
    padding-left: 10px;
    font-weight: 700;
  }

  .icon--printer {
    width: 24px;
    height: 24px;
  }
}

/* PRINT */

@media print {
  @page {
    size: a4;
    /* stylelint-disable */
    margin: 1.5cm;
    /* stylelint-enable */
  }

  body {
    padding: 0;
    background: #fff;
  }

  .facts-box {
    display: grid;
    margin: 0;
    padding: 0;
    box-shadow: none;

    &__title {
      display: block;
      margin: 0;
      padding: 0;
      word-break: break-word;
      background-color: #fff;
      border-bottom: 1px solid #000;
      width: fit-content;
    }

    &__content {
      display: block;
      margin: 0;
      padding: 0;
      word-break: break-word;
    }

    &__content-item {
      display: block;
    }
  }

  .container,
  .section {
    padding: 0;
  }

  section,
  section > div,
  .layout,
  .facts-box__title,
  .section,
  .layout__region,
  .container,
  .article-page,
  .row,
  .facts-box {
    break-inside: avoid;
    margin: 0;
    padding: 0;
  }

  /* stylelint-disable */
  #block-tabs,
  #block-pageheader,
  .status-messages,
  .article-page__hero,
  .article-page__related,
  .facts-box__button-below-wrapper,
  .print-button,
  .facts-box__inspiration-title:after,
  svg {
    display: none;
  }
  /* stylelint-enable */

  .layout__region {
    .paragraph {
      picture {
        display: none;
      }
    }
  }

  .article-content-sidebar,
  .article-content-wrapper {
    display: block;
    width: 100%;
  }

  .facts-box,
  .facts-box__title,
  .facts-box__content,
  .facts-box__content-item,
  .facts-box__content-item-label,
  .facts-box__content-item-value,
  .article-content-sidebar {
    margin: 0;
    padding: 0;
  }
}

.article-content-wrapper {
  & h2 {
    font-size: var(--base-font-size-xxlarge) !important;
  }

  & h3 {
    font-size: var(--base-font-size-xlarge) !important;
  }
}

.contextual-region {
  overflow: visible;
}

.undervi-box {
  display: -webkit-box;
  max-height: 300px;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 11;
  -webkit-box-orient: vertical;



  &--read-more {
    display: inline-flex;
    padding-bottom: 15px;
    font-weight: 700;

    a {
      display: flex;
      color: var(--color-purple);
      cursor: pointer;
      text-underline-offset: 3px;
    }

    &::after {
      display: block;
      width: 8px;
      height: 8px;
      margin-top: 9px;
      margin-left: 6px;
      border-top: 2px solid var(--color-purple);
      border-right: 2px solid var(--color-purple);
      transform: rotate(45deg);
      content: "";
    }


  }
}


  @media print {
    .undervi-box {
      display: block;
      max-height: none;
    }
    .undervi-box--read-more{
      display: none;
    }
  }

